Add getMetadataTrack endpoint
